clusters/groups/on-prem/in-cluster/k8s-definitions/albion-killbot/dashboard/templates/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: dashboard-virtualservice
spec:
  gateways:
    - istio-ingress/global-gateway
  hosts:
    - albion-killbot-dashboard.k8scicd.local
  http:
    - route:
      - destination:
          host: dashboard
          port:
            number: 80
